# mpi

./: .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile.build  Jenkinsfile  LICENSE.txt  README.md
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: build.yml
c++/mpi/: CMakeLists.txt  macros.hpp  monitor.hpp  mpi.cpp  mpi.hpp  pair.hpp  string.hpp  vector.hpp
doc/: CMakeLists.txt  ChangeLog.md  Doxyfile  about.rst  changelog.rst  conf.py.in  index.rst  install.rst  issues.rst
doc/_templates/: sideb.html
packaging/: CMakeLists.txt  Dockerfile.msan  TRIQS-mpi-3.0.0-foss-2019a-Python-3.7.2.eb  app4triqs-1.2.0-foss-2021b.eb  mpi-1.2.0-foss-2021b.eb  mpi-foss-2021b.eb.in
packaging/conda/: meta.yaml  meta.yaml.in
share/: CMakeLists.txt  mpi.modulefile.in  mpivars.sh.in
share/cmake/: CMakeLists.txt  mpi-config.cmake.in
test/: CMakeLists.txt
test/c++/: CMakeLists.txt  comm_split.cpp  mpi_barrier.cpp  mpi_chunk.cpp  mpi_cplx.cpp  mpi_custom.cpp  mpi_monitor.cpp  mpi_pair.cpp  mpi_string.cpp  mpi_vector.cpp  mpi_window.cpp  test_common.hpp  vector_zero_length.cpp
test/c++/mpi/: CMakeLists.txt  comm_split.cpp  mpi_custom.cpp  mpi_string.cpp  mpi_vector.cpp  test_common.hpp  vector_zero_length.cpp
